// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Pagination should renders correctly 1`] = `
<DocumentFragment>
  <nav>
    <ul
      class="pagination pagination-sm"
      data-testid="pagination"
    >
      <li
        aria-current="page"
        class="page-item false"
      >
        <span
          class="page-link "
          data-testid="pagination-item-0"
          role="button"
          tabindex="0"
        >
          1
        </span>
      </li>
      <li
        aria-current="page"
        class="page-item active"
      >
        <span
          class="page-link "
          data-testid="pagination-item-1"
          role="button"
          tabindex="1"
        >
          2
        </span>
      </li>
      <li
        aria-current="page"
        class="page-item false"
      >
        <span
          class="page-link "
          data-testid="pagination-item-2"
          role="button"
          tabindex="2"
        >
          3
        </span>
      </li>
      <li
        aria-current="page"
        class="page-item false"
      >
        <span
          class="page-link "
          data-testid="pagination-item-3"
          role="button"
          tabindex="3"
        >
          4
        </span>
      </li>
      <li
        aria-current="page"
        class="page-item false"
      >
        <span
          class="page-link "
          data-testid="pagination-item-4"
          role="button"
          tabindex="4"
        >
          5
        </span>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Test Pagination should renders correctly without out props 1`] = `
<DocumentFragment>
  <nav>
    <ul
      class="pagination pagination-sm"
      data-testid="pagination"
    >
      <li
        aria-current="page"
        class="page-item false"
      >
        <span
          class="page-link "
          data-testid="pagination-item-0"
          role="button"
          tabindex="0"
        >
          1
        </span>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
